--- a/responsive.css
+++ b/responsive.css
@@ -19,8 +19,212 @@ Responsive Styling (Tablet)
 =================================================== */
 @media (min-width: 600px) and (max-width:949px) {
 
-    body, html {
-        background-color: pink; /* placeholder purposes */
+    /* ===== Typography =====*/
+    h1 {
+        font-size: 36px;
+    }
+
+    h2 {
+        font-size: 22px;
+    }
+
+    p {
+        font-size: 18px;
+    }
+
+    button {
+        font-size: 14px;
+    }
+
+    .banner-container h1 {
+        font-size: 48px;
+    }
+
+    /* ===== Header & Navigation =====*/
+    header {
+        padding: 15px 40px;
+    }
+
+    .logo {
+        width: 120px;
+        height: 60px;
+    }
+
+    nav {
+        gap: 1rem;
+    }
+
+    .nav-menu {
+        gap: 1rem;
+    }
+
+    /* ===== Layout Containers =====*/
+    .banner-container {
+        height: 500px;
+        padding: 0 40px;
+    }
+
+    .cta-box,
+    .cater-box {
+        bottom: 50px;
+        max-width: 80%;
+    }
+
+    .hero, 
+    .menu, 
+    .gallery, 
+    .cater, 
+    .reviews,
+    .faq,
+    .location,
+    .our-story {
+        margin: 0px 40px 100px 40px;
+    }
+
+    /* ===== Menu Section =====*/
+    .menu-items-container {
+        gap: 15px;
+    }
+
+    .menu-item-box {
+        min-width: 240px;
+    }
+
+    .menu-img-placeholder {
+        height: 130px;
+    }
+
+    .dish-name {
+        font-size: 18px;
+    }
+
+    .dish-price {
+        font-size: 16px;
+    }
+
+    /* ===== Gallery Section =====*/
+    .gallery-container {
+        gap: 10px;
+    }
+
+    .row1, 
+    .row2, 
+    .row3 {
+        margin-bottom: 0;
+    }
+
+    .images {
+        width: 250px;
+        height: 250px;
+    }
+
+    .row2 .images:nth-child(1),
+    .row2 .images:nth-child(3) {
+    flex-grow: 3; /* makes the middle item wider */
+    flex-basis: 0; /* ensures it can grow */
+}
+
+    /* ===== Reviews Section =====*/
+    .review-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .column-one {
+        margin-top: 0;
+        width: 100%;
+        max-width: 600px;
+    }
+
+    .review-box {
+        margin: 15px 0 0;
+        padding: 30px;
+        max-width: 100%;
+    }
+
+    .review-person {
+        font-size: 22px;
+    }
+
+    .review-text {
+        font-size: 16px;
+    }
+
+    /* ===== FAQ Section =====*/
+    .faq {
+        max-width: 700px;
+        padding: 0 40px;
+    }
+
+    /* ===== Order Section =====*/
+    .order {
+        padding: 0 40px;
+    }
+
+    .order-box {
+        padding: 100px 0 70px;
+        max-width: 80%;
+    }
+
+    .order-box h2 {
+        font-size: 30px;
+    }
+
+    /* ===== Location Section =====*/
+    .location-box {
+        grid-template-columns: 1fr;
+        gap: 30px;
+    }
+
+    .map-placeholder {
+        height: 300px;
+    }
+
+    .restaurant-info {
+        gap: 15px;
+    }
+
+    .restaurant-name {
+        font-size: 30px;
+    }
+
+    .address {
+        font-size: 22px;
+    }
+
+    .review-button {
+        max-width: fit-content;
+        
+    }
+
+    /* ===== Contact Us Section =====*/
+    .contact-us {
+        padding: 80px 40px;
+    }
+
+    /* ===== Footer Section =====*/
+    footer {
+        margin: 0 40px 60px 40px;
+        padding: 30px 40px;
+    }
+
+    .footer-content {
+        grid-template-columns: 1fr;
+        text-align: left;
+    }
+
+    .footer-logo{
+        text-align: center;
+    }
+
+    .footer-logo img {
+        max-width: 150px;
+        margin: 0 auto;
+    }
+
+    .footer-links {
+        margin: 30px 0;
     }
 
 }
@@ -52,8 +256,13 @@ Responsive Styling (Mobile)
     }
 
     /* ===== Header & Nvigation =====*/
-    nav {
+    #order-btn-desktop {
         display: none;
+    }
+
+    nav button {
+        display: block;
+        padding: 0;
     }
 
     .logo {
@@ -61,6 +270,64 @@ Responsive Styling (Mobile)
         height: 40px;
         margin: 0 auto;
     }
+    
+    .mobile-menu-toggle {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 25px;
+        height: 20px;
+        background: transparent;
+        border: none;
+        cursor: pointer;
+        position: absolute;
+        left: 20px; /* adjust as needed */
+        top: 6%;
+        transform: translateY(-50%);
+    }
+    
+    .bar {
+        height: 3px;
+        width: 100%;
+        background-color: var(--dark-red);
+        border-radius: 10px;
+    }
+
+    nav {
+        position: relative;
+    }
+    
+    .nav-menu {
+        display: none;
+        flex-direction: column;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 70vw;
+        height: 100vh;
+        background-color: var(--beige);
+        padding: 40px 20px;
+        z-index: 1000;
+    }
+    
+    
+    .nav-menu.active {
+        display: flex;
+    }
+
+    .close-menu {
+        background: none;
+        border: none;
+        font-size: 28px;
+        font-weight: bold;
+        color: var(--dark-red);
+        cursor: pointer;
+        text-align: left;
+        margin-bottom: 10px;
+    }
+    
+
+    
 
     /* ===== Layout Containers =====*/
     .banner-container {
